--- a/example/index.html
+++ b/example/index.html
@@ -70,12 +70,12 @@
   <div id="app">
     <router-view></router-view>
   </div><!-- /#app -->
-  
+
   <script src="https://unpkg.com/vue@2.2.6/dist/vue.min.js"></script>
   <script src="https://unpkg.com/vue-router@2.4.0/dist/vue-router.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/vue-axios@2.0.2/dist/vue-axios.min.js"></script>
-  <script src="/vue-authenticate.js"></script>
+  <script src="/vue-auth.js"></script>
   <script src="/index.js"></script>
 </body>
 </html>
